# inputmangler

./: CMakeLists.txt  README  abstractinputhandler.cpp  abstractinputhandler.h  config.xml  debughandler.cpp  debughandler.h  definitions.h  devhandler.cpp  devhandler.h  handlers.h  imdbusinterface.cpp  imdbusinterface.h  inputMangler.kdev4  inputevent.cpp  inputevent.h  inputmangler.cpp  inputmangler.h  install.sh  keydefs.cpp  keydefs.h  kwinNotifyOnWindowChange.js  loadItNow.sh  main.cpp  nethandler.cpp  nethandler.h  output.cpp  output.h  qtsignalhandler.cpp  qtsignalhandler.h  setupHelper.sh  transformationstructure.cpp  transformationstructure.h  xwatcher.cpp  xwatcher.h
debian/: changelog  control  copyright  dirs  docs  files  install  postinst  postrm  rules
doc/: README  config.xml.example
firstrun/: CMakeLists.txt  FirstRunWizard.cpp  FirstRunWizard.h  UdevRules.cpp  UdevRules.h  firstrun.ui  main.cpp
inputdummy/: 40-inputdummy.rules  Makefile  dkms.conf  inputdummy.c  inputdummy.h
inputdummy/debian/: changelog  control  copyright  postinst  rules
keymaps/: axismap  charmap.de  charmap.dvp  charmap.us  keymap.de  keymap.dvp  keymap.us
kwinscript/: kwinNotifyOnWindowChange.kwinscript  makeKWinScript
kwinscript/kwinNotifyOnWindowChange/: metadata.desktop  metadata.json
kwinscript/kwinNotifyOnWindowChange/contents/code/: main.js
meta/: depends  description  prepareRelease.sh
old/: output.cpp  output.h
scripts/: make_udev_rules.sh  setupHelper.sh  trackCurrentWindow.sh
shared/: inputevent.cpp  inputevent.h  keydefs.cpp  keydefs.h
src/: CMakeLists.txt  ConfParser.cpp  ConfParser.h  definitions.h  imdbusinterface.cpp  imdbusinterface.h  inputevent.cpp  inputevent.h  inputmangler.cpp  inputmangler.h  keydefs.cpp  keydefs.h  keydefs_charmap.cpp  keydefs_charmap.h  main.cpp  output.cpp  output.h  qtsignalhandler.cpp  qtsignalhandler.h  transformationstructure.cpp  transformationstructure.h
src/handlers/: abstractinputhandler.cpp  abstractinputhandler.h  debughandler.cpp  debughandler.h  devhandler.cpp  devhandler.h  handlers.h  nethandler.cpp  nethandler.h  xwatcher.cpp  xwatcher.h
src/output/: macropartbase.cpp  macropartbase.h  outabsrel.cpp  outabsrel.h  outaccel.cpp  outaccel.h  outauto.cpp  outauto.h  outdebounce.cpp  outdebounce.h  outevent.cpp  outevent.h  outmacropart.cpp  outmacropart.h  outmacrostart.cpp  outmacrostart.h  outsimple.cpp  outsimple.h  outwait.cpp  outwait.h
ui/: CMakeLists.txt  imconfmodel.cpp  imconfmodel.h  inoutbox.cpp  inoutbox.h  inputmanglerui.cpp  inputmanglerui.h  inputmanglerui.ui  main.cpp
